# parent

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  parent.py  pyproject.toml
